--- a/Laba3/index.html
+++ b/Laba3/index.html
@@ -12,7 +12,7 @@
 <header class="header">
     <div class="header__inner">
         <div class="intro">
-            <h1><img src="images\rocket.jpg">BOOSTFOLIA</h1>
+            <h1><img src="images/rocket.jpg" alt="Sorry">BOOSTFOLIA</h1>
             <nav class="nav">
                 <a class="nav__link" href="#1">About us</a>
                 <a class="nav__link" href="#2">Who we are</a>
@@ -35,13 +35,13 @@
         <p class="About__us_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         <div class="About_us_colomn">
-            <div class="blocks"><h3><img class="image" src="images\1.png"></h3></div>
-            <div class="blocks"><h3><img class="image" src="images\2.png"></h3> </div>
-            <div class="blocks"><h3><img class="image" src="images\3.png"></h3></div>
+            <div class="blocks"><h3 class="head_3"><img class="image" src="images/1.png" alt="Sorry"></h3></div>
+            <div class="blocks"><h3 class="head_3"><img class="image" src="images/2.png" alt="Sorry"></h3> </div>
+            <div class="blocks"><h3 class="head_3"><img class="image" src="images/3.png" alt="Sorry"></h3></div>
         </div>
     </div>
 </section>
-<img class="image1" src="images\scene.png" id="2">
+<img class="image1" src="images/scene.png" id="2" alt="Sorry">
 <section class="OUR__works" id="3">
     <div class="Who_we_are" >
         <h1>Who we are</h1>
@@ -49,6 +49,7 @@
             ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         <div class="Our_skills">
             <h1>Our skills</h1>
+            <ul>
             <li>
                 <h3>photoshop</h3><span class="bar"><span class="photoshop"></span></span>
             </li>
@@ -61,10 +62,11 @@
             <li>
                 <h3>after effects</h3><span class="bar"><span class="after_effects"></span></span>
             </li>
+            </ul>
         </div>
     </div>
 </section>
-<img class="img1" src="images/some.png" >
+<img class="img1" src="images/some.png" alt="Sorry" >
 <section class="Blog" id="4">
         <h1>Blog posts</h1>
     <p class="About__us_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
@@ -176,7 +178,7 @@
 
 </section>
 <footer class="footer">
-    <img class="lastimg" src="images/footer.png">
+    <img class="lastimg" src="images/footer.png" alt="Sorry">
 </footer>
 </body>
 </html>
