--- a/Laba3/index.html
+++ b/Laba3/index.html
@@ -12,7 +12,7 @@
 <header class="header">
     <div class="header__inner">
         <div class="intro">
-            <h1><img src="images/rocket.jpg" alt="Sorry">BOOSTFOLIA</h1>
+            <h1 id="firstheader"><img src="images/rocket.jpg" alt="Sorry">BOOSTFOLIA</h1>
             <nav class="nav">
                 <a class="nav__link" href="#1">About us</a>
                 <a class="nav__link" href="#2">Who we are</a>
@@ -48,8 +48,8 @@
         <p class="About__us_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         <div class="Our_skills">
-            <h2>Our skills</h2>
-            <ul>
+            <h2 id="fourghtheader">Our skills</h2>
+            <ul id="UL">
             <li>
                 <h3>photoshop</h3><span class="bar"><span class="photoshop"></span></span>
             </li>
@@ -112,12 +112,12 @@
     <div class="pricing-table">
         <div class="col">
             <div class="table">
-                <h2>Regular</h2>
+                <h2 id="secondheader">Regular</h2>
                 <div class="price">
                     $10
                     <span>Per month</span>
                 </div>
-                <ul>
+                <ul class="Ul">
                     <li ><strong>2</strong>Websites</li>
                     <li ><strong>10</strong>Emails</li>
                     <li ><strong>100 GB</strong>Storage</li>
@@ -128,7 +128,7 @@
         </div>
         <div class="col">
             <div class="table">
-                <h2>Pro Pack</h2>
+                <h2 id="thirdheader">Pro Pack</h2>
                 <div class="price">
                     $25
                     <span>Per month</span>
@@ -144,7 +144,7 @@
         </div>
         <div class="col">
             <div class="table">
-                <h2>Premium</h2>
+                <h2 id="secondheader">Premium</h2>
                 <div class="price">
                     $20
                     <span>Per month</span>
@@ -160,7 +160,7 @@
         </div>
         <div class="col">
             <div class="table">
-                <h2>Ultimate</h2>
+                <h2 id="secondheader">Ultimate</h2>
                 <div class="price">
                     $25
                     <span>Per month</span>
